Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysisFinding__c/DeweyAnalysisFinding__c.object-meta.xml
<CustomObject>
    <description>Junction between DeweyAnalysis__c and DeweyFinding__c. Each record links a unique finding to the analysis run that detected it. Allows a single DeweyFinding__c to appear across multiple analysis runs without duplication.</description>
    <label>Dewey Analysis Finding</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Analysis Finding</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dewey Analysis Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>