Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysisFinding__c/fields/DeweyAnalysis__c.field-meta.xml
<CustomField>
    <fullName>DeweyAnalysis__c</fullName>
    <label>Dewey Analysis</label>
    <type>MasterDetail</type>
    <referenceTo>DeweyAnalysis__c</referenceTo>
    <relationshipLabel>Analysis Findings</relationshipLabel>
    <relationshipName>AnalysisFindings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>The analysis run in which this finding was detected.</description>
</CustomField>