Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysisFinding__c/fields/DeweyFinding__c.field-meta.xml
<CustomField>
    <fullName>DeweyFinding__c</fullName>
    <label>Dewey Finding</label>
    <type>Lookup</type>
    <referenceTo>DeweyFinding__c</referenceTo>
    <relationshipLabel>Analysis Links</relationshipLabel>
    <relationshipName>AnalysisLinks</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The unique finding record linked to this analysis run.</description>
</CustomField>