Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysisFinding__c/fields/IsDisparuInRun__c.field-meta.xml
<CustomField>
    <fullName>IsDisparuInRun__c</fullName>
    <label>Disappeared in This Run</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True if this finding was active in a previous run but not detected in this analysis run (disappeared). Symmetric to IsNewInRun__c. Used for delta tracking by component and component type.</description>
</CustomField>