Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyAnalysisFinding__c/fields/IsNewInRun__c.field-meta.xml
<CustomField>
    <fullName>IsNewInRun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this finding was first discovered in this specific analysis run (did not exist in any previous run for this org).</description>
    <label>New in This Run</label>
    <type>Checkbox</type>
</CustomField>